--- a/src/journal.html
+++ b/src/journal.html
@@ -23,7 +23,7 @@
             <input type="text" name="title"><br>
             <label for="content">Content:</label><br>
             <textarea class="text-area" id="content" name="content" rows="30" cols="100" placeholder="write" required></textarea><br>
-            <button class="journal-button" type="submit">Save</button>
+            <button class="journal-button" type="submit">POST</button>
         </form>
     </div>
 
